syntax = "proto3";

package order_to_product;

import "google/protobuf/empty.proto";

message Product {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  int32 price = 4;
}

message CheckProductRequest {
  repeated Product product_list = 2;
}

message ProductAvailability {
  string id = 1;
  string name = 2;
  int32 available_quantity = 3;
  bool is_available = 4;
}

message CheckProductResponse {
  repeated ProductAvailability products = 1;
}

message UpdateInventoryRequest {
  string user_id = 1;
  repeated Product products = 2;
}

message UpdateInventoryResponse {
  bool success = 1;
}

service ProductService {
  rpc CheckProduct (CheckProductRequest) returns (CheckProductResponse);
  rpc UpdateInventory (UpdateInventoryRequest) returns (UpdateInventoryResponse);
}
